[ESURVEY-8522] Self-assessment - Issue with the visibility feature

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -2825,3 +2825,7 @@ input[type=radio]:checked + .choice-button-label:hover{
 .label-success {
 	background-color: #078707 !important;
 }
+
+.sahidden {
+	display: none;
+}
